--- a/portlets/payroll-email-sender-portlet/docroot/WEB-INF/src/content/email.vm
+++ b/portlets/payroll-email-sender-portlet/docroot/WEB-INF/src/content/email.vm
@@ -1,33 +1,12 @@
-<br />
-<table>
-  <tr>
-    <td>Employee Name</td>
-    <td>ID Nº</td>
-    <td>Monthly Fixed Gross Salary US$</td>
-    <td>Qty. days</td>
-    <td>Gross Salary US$</td>
-    <td>Other payments</td>
-    <td>This Month Gross salary to pay US$</td>
-    <td>Gross Salary in colones</td>
-    <td>Social Security</td>
-    <td>Salary Tax</td>
-    <td>Life & Health Insurance</td>
-    <td>Net Salary in colones</td>
-    <td>Net Salary US$</td>
-  </tr>
-  <tr>
-    <td>$name</td>
-    <td>$id</td>
-    <td>$mFixedDol</td>
-    <td>$qDays</td>
-    <td>$grossSal</td>
-    <td>$oPays</td>
-    <td>$thisMGrossSal</td>
-    <td>$grossSalCol</td>
-    <td>$ss</td>
-    <td>$st</td>
-    <td>$lhInsu</td>
-    <td>$nSalCol</td>
-    <td>$nSal</td>
-  </tr>
+<table border="1" cellpadding="1" cellspacing="1" style="width:500px;">
+	<tbody>
+		<tr>
+			<td>Columna</td>
+			<td>Columna</td>
+		</tr>
+		<tr>
+			<td>$column_a</td>
+			<td>$column_b</td>
+		</tr>
+	</tbody>
 </table>
